@@ -1,3 +1,8 @@
+2016-07-19  Jeffrey Stedfast  <jeff@xamarin.com>
+
+	* gmime/gmime-gpg-context.c (gpg_ctx_get_argv): Always use --batch mode and
+	don't pass --yes.
+
 2016-07-14  Jeffrey Stedfast  <fejj@gnome.org>
 
 	* gmime/gmime-parser.c (parser_construct_part): When parsing individual
